# dftracer-utils

./: .gitignore  CMakeLists.txt  CMakePresets.json  DEVELOPERS_GUIDE.md  Makefile  README.md  flake.nix  pyproject.toml  setup.py
.github/workflows/: ci.yml  python-publish.yaml
cmake/modules/: Dependencies.cmake  Rpath.cmake
docs/: README.md
docs/source/: developers.rst  index.rst  installation.rst  quickstart.rst
docs/source/api/: index.rst
docs/source/cpp_api/: index.rst
include/dftracer/utils/components/compression/: compression.h
include/dftracer/utils/components/filesystem/: directory_scanner.h  filesystem.h  pattern_directory_scanner.h
include/dftracer/utils/components/io/: binary_file_reader.h  chunk_iterator.h  file_reader.h  io.h  shared.h  streaming.h  streaming_file_reader.h  streaming_file_writer.h
include/dftracer/utils/components/io/lines/: lines.h  (+4 more)
include/dftracer/utils/components/text/: line_filter.h  line_splitter.h  shared.h  text.h  text_hasher.h
include/dftracer/utils/components/workflows/: batch_processor.h  chunk_verifier.h  directory_file_processor.h  file_compressor.h  file_decompressor.h  indexed_file_reader.h  line_batch_processor.h  workflow_types.h  workflows.h
include/dftracer/utils/core/: core.h
include/dftracer/utils/core/common/: type_name.h  typedefs.h
include/dftracer/utils/core/pipeline/: error.h  executor.h  pipeline.h  pipeline_config.h  pipeline_config_manager.h  pipeline_output.h  scheduler.h
include/dftracer/utils/core/tasks/: function_task.h  noop_task.h  task.h  task_context.h  task_impl.h  task_result.h  task_tag.h  tasks.h  typed_task.h
include/dftracer/utils/core/utilities/: utilities.h  utility.h  utility_adapter.h  utility_executor.h  utility_traits.h
include/dftracer/utils/indexer/: indexer.h  indexer_factory.h
include/dftracer/utils/reader/: reader.h  reader_factory.h  stream.h  stream_config.h  stream_type.h
include/dftracer/utils/utilities/composites/: batch_processor.h  chunk_verifier.h  composite_types.h  composites.h  directory_file_processor.h  file_compressor.h  file_compressor_utility.h  file_decompressor.h  file_decompressor_utility.h  file_merger.h  file_merger_utility.h  indexed_file_reader.h  indexed_file_reader_utility.h  line_batch_processor.h  line_batch_processor_utility.h  types.h
include/dftracer/utils/utilities/compression/: compression.h
include/dftracer/utils/utilities/filesystem/: directory_scanner.h  filesystem.h  pattern_directory_scanner.h
include/dftracer/utils/utilities/hash/: base_hasher.h  hash.h  hasher.h  hasher_utility.h  mt_hasher.h  shared.h  std_hasher.h  xxh3_hasher.h  xxh64_hasher.h
include/dftracer/utils/utilities/io/: binary_file_reader.h  chunk_iterator.h  file_reader.h  io.h  streaming_file_reader.h  streaming_file_writer.h
include/dftracer/utils/utilities/text/: line_filter.h  line_splitter.h  shared.h
python/dftracer/utils/: dftracer_utils_ext.pyi
scripts/: build-wheel.sh
src/: CMakeLists.txt
src/dftracer/utils/binaries/: dftracer_event_count.cpp  dftracer_info.cpp  dftracer_merge.cpp  dftracer_pgzip.cpp  dftracer_reader.cpp  dftracer_split.cpp  dftracer_tar.cpp  test_utilities.cpp
src/dftracer/utils/core/common/: checkpointer.h  format_detector.cpp  format_detector.h  inflater.h  logging.h
src/dftracer/utils/core/pipeline/: error.cpp  executor.cpp  pipeline.cpp  scheduler.cpp
src/dftracer/utils/core/tasks/: task_context.cpp
src/dftracer/utils/core/utils/: string.cpp  string.h  timer.cpp
src/dftracer/utils/indexer/: checkpoint_size.cpp  checkpoint_size.h  helpers.cpp  indexer_c.cpp  indexer_factory.cpp  inflater.h
src/dftracer/utils/indexer/common/: gzip_checkpointer.h  gzip_inflater.h
src/dftracer/utils/indexer/gzip/: constants.cpp  gzip_indexer.cpp  gzip_indexer.h
src/dftracer/utils/indexer/sqlite/: statement.h
src/dftracer/utils/indexer/tar/: constants.cpp  tar_indexer.cpp  tar_indexer.h  tar_parser.h
src/dftracer/utils/python/: json.cpp  lazy_json_line_processor.h  pylist_line_processor.h  reader.cpp
src/dftracer/utils/reader/: gzip_reader.cpp  gzip_reader.h  inflater.h  reader_c.cpp  reader_factory.cpp  reader_stream_cache.h  stream_c.cpp  tar_reader.cpp  tar_reader.h
src/dftracer/utils/reader/streams/: gzip_byte_stream.h  gzip_line_byte_stream.h  gzip_stream.h  line_stream.h  multi_line_stream.h  stream.h  tar_byte_stream.h  tar_line_byte_stream.h  tar_stream.h
tests/: CMakeLists.txt  test_basic_factory.cpp  test_pipeline.cpp  test_reader.c  test_reader.cpp  test_reader_formats.cpp  test_reader_formats_c.c  test_reader_robustness.cpp  test_reader_tar_comprehensive.cpp  testing_utilities.cpp
tests/python/: test_reader.py
tests/reader/: test_basic_factory.cpp  test_reader.c  test_reader.cpp  test_reader_formats.cpp  test_reader_line_byte_stream.cpp  test_reader_multi_lines_byte_stream.cpp  test_reader_robustness.cpp  test_reader_stream.c  test_reader_stream.cpp  test_reader_tar_comprehensive.cpp
tests/utilities/: CMakeLists.txt
tests/utilities/composites/: test_batch_processor.cpp  test_chunk_verifier.cpp  test_directory_file_processor.cpp  test_file_compressor.cpp  test_file_decompressor.cpp  test_file_merger.cpp  test_indexed_file_reader.cpp  test_line_batch_processor.cpp
tests/utilities/composites/dft/: test_chunk_extractor.cpp  test_event_collector.cpp  test_event_hasher.cpp  test_index_builder.cpp  test_metadata_collector.cpp
tests/utilities/compression/zlib/: test_compressor.cpp  test_decompressor.cpp  test_streaming_compressor.cpp  test_streaming_decompressor.cpp
tests/utilities/filesystem/: test_directory_scanner.cpp  test_pattern_directory_scanner.cpp
tests/utilities/hash/: test_hasher_utility.cpp  test_mt_hasher.cpp  test_std_hasher.cpp  test_xxh3_hasher.cpp  test_xxh64_hasher.cpp
tests/utilities/io/: test_binary_file_reader.cpp  test_file_reader.cpp  test_streaming_file_reader.cpp  test_streaming_file_writer.cpp
tests/utilities/io/lines/: test_streaming_line_reader.cpp
tests/utilities/io/lines/sources/: test_indexed_file_bytes_iterator.cpp  test_indexed_file_line_iterator.cpp
(+136 files in other folders)
